crates/mir/tests/fixtures/errors/return_borrow_view_param.snap
---
source: crates/mir/tests/lowering_errors.rs
assertion_line: 27
expression: err.to_string()
input_file: tests/fixtures/errors/return_borrow_view_param.fe
---
error[10-0003]: invalid return borrow in `fn borrow_view`
  ┌─ return_borrow_view_param.fe:2:5
  │
1 │ fn borrow_view(x: u256) -> ref u256 {
  │                ------- `x` is a `view` parameter
2 │     ref x
  │     ^^^ return borrows must be derived from explicit borrow parameters
  │
  = help: consider changing `x: u256` to `x: ref u256`
